--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -4,8 +4,10 @@ env:
 extends:
   - airbnb-base
 parserOptions:
-  ecmaVersion: 12
+  ecmaVersion: 2020
   sourceType: module
 rules:
+  no-underscore-dangle: [2, { 'allow': ['__filename', '__dirname'] }]
   no-console: 0
   import/extensions: 0
+  parserOptions:
