--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "@hexlet/code",
   "type": "module",
+  "jest": {
+    "testEnvironment": "node",
+    "transform": {}
+  },
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/ArturioM/frontend-project-lvl2/workflows/hexlet-check/badge.svg)](https://github.com/ArturioM/frontend-project-lvl2/actions)",
   "main": "index.js",
@@ -30,7 +34,8 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^1.7.0"
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "jest": "^26.6.3"
   },
   "bin": {
     "gendiff": "bin/gendiff.js"
